review section done

--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@
                 <main class="hotel-view">
                     <div class="gallery">
                         <figure class="gallery__item">
-                            <img src="img/hotel-1.jpg" alt="photo of hotel one" class="gallery__photo">   
+                            <img src="img/hotel-1.jpg" alt="photo of hotel one" class="gallery__photo">
                         </figure>
 
                         <figure class="gallery__item">
-                            <img src="img/hotel-2.jpg" alt="photo of hotel two" class="gallery__photo">   
+                            <img src="img/hotel-2.jpg" alt="photo of hotel two" class="gallery__photo">
                         </figure>
 
                         <figure class="gallery__item">
-                            <img src="img/hotel-3.jpg" alt="photo of hotel three" class="gallery__photo">   
+                            <img src="img/hotel-3.jpg" alt="photo of hotel three" class="gallery__photo">
                         </figure>
                     </div>
 
@@ -133,7 +133,7 @@
                         </div>
 
                         <div class="overview__rating">
-                            <div class="overview__rating-average">8.6</div>
+                            <div class="overview__rating-average">9.6</div>
                             <div class="overview__rating-count">429 votes</div>
                         </div>
                     </div>
@@ -172,7 +172,36 @@
                         </div>
 
                         <div class="user-reviews">
-                            user reviews
+                            <figure class="review">
+                                <blockquote class="review_text">
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime, inventore, earum quo ducimus qui ullam mollitia vel sit dolorum eaque molestias ad? Autem nam omnis ducimus maiores at consequatur temporibus.
+                                </blockquote>
+                                <figcaption class="review__user">
+                                    <img src="img/user-5.jpg" alt="user 5" class="review__photo">
+                                    <div class="review__user-box">
+                                        <p class="review__user-name">Nick Smith</p>
+                                        <p class="review__user-date">March 3rd, 2022</p>
+                                    </div>
+                                    <div class="review__rating">9.9</div>
+                                </figcaption>
+                            </figure>
+                            <figure class="review">
+                                <blockquote class="review_text">
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime, inventore, earum quo ducimus qui ullam mollitia vel sit dolorum eaque molestias ad? Autem nam omnis ducimus maiores at consequatur temporibus.
+                                </blockquote>
+                                <figcaption class="review__user">
+                                    <img src="img/user-6.jpg" alt="user 6" class="review__photo">
+                                    <div class="review__user-box">
+                                        <p class="review__user-name">Nick Smith</p>
+                                        <p class="review__user-date">Feb 26th 2022</p>
+                                    </div>
+                                    <div class="review__rating">9.8</div>
+                                </figcaption>
+                            </figure>
+
+                            <button class="btn-inline">Show all
+                                <span>&rarr;</span>
+                            </button>
                         </div>
                     </div>
                 </main>
